--- a/it/index.html
+++ b/it/index.html
@@ -18,7 +18,7 @@
   <a href="index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
   
   <div class="lang-switch">
-    <a href="../en/index">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="../en/404">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton">
@@ -28,42 +28,42 @@
     </label>
   </div>
   <div class="desktop-menu">
-    <a href="#">Studio</a>
-    <a href="#">News</a>
-    <a href="#" onclick="toggleMenu('servicesMenu')">Progetti</a>
+    <a href="404">Studio</a>
+    <a href="404">News</a>
+    <a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
     <ul id="servicesMenu" class="dropdown-menu">
-      <li><a href="#">Tutti i progetti</a></li>
-      <li><a href="#">Rigenerazione spazi urbani</a></li>
-      <li><a href="#">Parchi e giardini</a></li>
-      <li><a href="#">Riqualificazione ambientale e paesaggistica</a></li>
-      <li><a href="#">Inserimento ambientale di infrastrutture</a></li>
-      <li><a href="#">Architettura</a></li>
+      <li><a href="404">Tutti i progetti</a></li>
+      <li><a href="404">Rigenerazione spazi urbani</a></li>
+      <li><a href="404">Parchi e giardini</a></li>
+      <li><a href="404">Riqualificazione ambientale e paesaggistica</a></li>
+      <li><a href="404">Inserimento ambientale di infrastrutture</a></li>
+      <li><a href="404">Architettura</a></li>
     </ul>
-    <a href="#">Contatti</a>
+    <a href="404">Contatti</a>
   </div>
 </header>
 
 <!--MENU-->
 <div id="mySidenav" class="sidenav">
-  <a href="#">Studio</a>
-  <a href="#">News</a>
+  <a href="404">Studio</a>
+  <a href="404">News</a>
   <div class="sub-links">
     <a href="#" onclick="toggleSubNav()">Progetti</a>
     <div id="subNavLinks" class="sub-nav-links">
-      <a href="#">Tutti i progetti</a>
-      <a href="#">Rigenerazione spazi urbani</a>
-      <a href="#">Parchi e giardini</a>
-      <a href="#">Riqualificazione ambientale e paesaggistica</a>
-      <a href="#">Inserimento ambientale di infrastrutture</a>
-      <a href="#">Architettura</a>
+      <a href="404">Tutti i progetti</a>
+      <a href="404">Rigenerazione spazi urbani</a>
+      <a href="404">Parchi e giardini</a>
+      <a href="404">Riqualificazione ambientale e paesaggistica</a>
+      <a href="404">Inserimento ambientale di infrastrutture</a>
+      <a href="404">Architettura</a>
     </div>
   </div>
-  <a href="#">Contatti</a>
+  <a href="404">Contatti</a>
 </div>
 
 <main>
 <!--#0-->
-  <section class="mono">
+  <section>
     <div class="slider" id="slider1">
       <div class="slides">
         <div class="slide">
@@ -72,7 +72,7 @@
                 <div class="quote">
                   <p>Parco della Pace - Vicenza</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Scopri di <span>+</span></a>
+                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
                 <div class="quote">
                   <p>Castellaneta Marina</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Scopri di <span>+</span></a>
+                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
         </div>
@@ -92,7 +92,7 @@
                 <div class="quote">
                   <p>Expo 2015 - Milano</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Scopri di <span>+</span></a>
+                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
         </div>
@@ -102,7 +102,7 @@
                 <div class="quote">
                   <p>Parco Nazionale Gran Paradiso</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Scopri di <span>+</span></a>
+                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
                 <div class="quote">
                   <p>Grand Hotel di San Pellegrino Terme</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Scopri di <span>+</span></a>
+                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
         </div>
@@ -126,31 +126,29 @@
       <img src="../library/home/pan-home-chisiamo.jpg">
     </div>
     <div class="text-elements">
-      <div class="big-separator"></div>
       <h1>Chi siamo</h1>
       <h2><span>P</span>rogetazzione<br><span>A</span>rchitettura <span>+</span><br><span>N</span>atura</h2>
       <p>PAN associati S.R.L. è una società fondata nel 2001 costituita da un gruppo multidisciplinare di professionisti che operano nei campi della progettazione architettonica e del paesaggio, fino alla pianificazione territoriale.</p>
       <p>La nostra missione è rivitalizzare spazi degradati, convertendoli in aree vivibili e sostenibili che siano di valore per le comunità locali.</p>
       <p>Vediamo in questi spazi un'opportunità per migliorare la vita urbana, creare nuovi habitat ed ecosistemi, favorire la biodiversità, e apportare benefici ecologici attraverso infrastrutture che offrano servizi ecosistemici. Ci impegniamo nella lotta contro i cambiamenti climatici adottando strategie di progettazione ispirate alle soluzioni basate sulla natura (Nature Based Solutions, NBS).</p>
-      <div class="small-separator"></div>
-      <a class="classic-link" href="#">Scopri di <span>+</span></a>
+      <div class="big-separator"></div>
+      <a class="classic-link" href="404">Scopri di <span>+</span></a>
     </div>
   </section>
 <!--#2-->
   <section class="split">
     <div class="text-elements">
-      <div class="big-separator"></div>
       <h1>Cosa facciamo</h1>
       <h2>Le nostre aree di competenza</h2>
       <p>Attraverso un approccio multidisciplinare, la nostra attività si estende sia al settore pubblico che a quello privato, offrendo una gamma di servizi che copre tutte le fasi della progettazione, direzione lavori e coordinamento della sicurezza, sia durante la fase di progettazione che di esecuzione.</p>
       <p>Offriamo inoltre consulenze specialistiche nel settore ambientale e paesaggistico, tra cui studi di fattibilità, analisi agronomiche, botaniche e forestali, analisi e studi urbanistici, verifiche e studi ambientali per l’autorizzazione di piani e progetti.
       <p>Nel nostro processo creativo, prestiamo attenzione a ogni aspetto dell'ecosistema locale, mirando a sviluppare paesaggi funzionali e resilienti.</p>
-      <!--<div class="small-separator"></div>
-      <p><a class="hermit-link" href="#">Rigenerazione spazi urbani &nearr;</a>
-      <br><a class="hermit-link" href="#">Parchi e giardini &nearr;</a>
-      <br><a class="hermit-link" href="#">Riqualificazione ambientale e paesaggistica &nearr;</a>
-      <br><a class="hermit-link" href="#">Inserimento ambientale di infrastrutture &nearr;</a>
-      <br><a class="hermit-link" href="#">Architettura &nearr;</a></p>-->
+      <div class="big-separator"></div>
+      <a class="classic-link" href="404">Rigenerazione&nbsp;spazi&nbsp;urbani&nbsp;&nearr;</a>
+      <a class="classic-link" href="404">Parchi&nbsp;e&nbsp;giardini&nbsp;&nearr;</a>
+      <a class="classic-link" href="404">Riqualificazione&nbsp;ambientale&nbsp;e&nbsp;paesaggistica&nbsp;&nearr;</a>
+      <a class="classic-link" href="404">Inserimento&nbsp;ambientale&nbsp;di&nbsp;infrastrutture&nbsp;&nearr;</a>
+      <a class="classic-link" href="404">Architettura&nbsp;&nearr;</a>
     </div>
     <div class="slider" id="slider2">
       <div class="slides">
@@ -160,7 +158,7 @@
                 <div class="quote">
                   <p>Rigenerazione spazi urbani</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Scopri di <span>+</span></a>
+                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
         </div>
@@ -170,7 +168,7 @@
                 <div class="quote">
                   <p>Parchi e giardini</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Scopri di <span>+</span></a>
+                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
         </div>
@@ -180,7 +178,7 @@
                 <div class="quote">
                   <p>Riqualificazione ambientale e paesaggistica</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Scopri di <span>+</span></a>
+                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
         </div>
@@ -190,7 +188,7 @@
                 <div class="quote">
                   <p>Inserimento ambientale di infrastrutture</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Scopri di <span>+</span></a>
+                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
         </div>
@@ -200,7 +198,7 @@
                 <div class="quote">
                   <p>Architettura</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Scopri di <span>+</span></a>
+                  <a class="color-reversed-link" href="404">Scopri di <span>+</span></a>
                 </div>
             </div>
         </div>
@@ -213,13 +211,13 @@
       <img src="../library/home/pan-home-lavoraconnoi.jpg">
     </div>
     <div class="text-elements">
-      <div class="big-separator"></div>
       <h1>Collaborazioni</h1>
-      <h2>Hai qualcosa in&nbsp;+&nbsp;?<br>Lavora con noi!</h2>
+      <h2>Hai qualcosa in&nbsp;+?<br>Lavora con noi!</h2>
       <p>Lo studio PAN è sempre alla ricerca di nuove figure brillanti e appassionate pronte a esplorare nuovi orizzonti e che possano arricchire il nostro team di professionisti per una collaborazione stimolante e a lungo termine.</p>
       <p>Sei motivato a dare forma al futuro attraverso la progettazione innovativa e sostenibile del paesaggio?</p>
       <p>Scopri come la tua visione può contribuire a plasmare ambienti memorabili e unisciti a noi in questa entusiasmante avventura. Visita la nostra sezione 'Lavora con noi' per saperne di più e inviaci la tua candidatura.</p>
-      <a class="classic-link" href="#">Scopri di <span>+</span></a>
+      <div class="big-separator"></div>
+      <a class="classic-link" href="404">Scopri di <span>+</span></a>
     </div>
   </section>
 </main>
@@ -230,15 +228,15 @@
     <div class="footer-top">
         <div class="column">
             <h1>Pubblicazione</h1>
-            <a class="hermit-link" href="#">Parco della Pace - Paysage n° 53 &nearr;</a>
+            <a class="hermit-link" href="404">Parco della Pace - Top Scape Paysage n° 53 &nearr;</a>
         </div>
         <div class="column">
             <h1>Pubblicazione</h1>
-            <a class="hermit-link" href="#">Parco della Pace- Rivista Indusstria delle costruzioni n°493 &nearr;</a>
+            <a class="hermit-link" href="404">Parco della Pace- Rivista Industria delle costruzioni n°493 &nearr;</a>
         </div>
         <div class="column">
             <h1>Pubblicazione</h1>
-            <a class="hermit-link" href="#">Parco della Pace - Paysage n° 46 &nearr;</a>
+            <a class="hermit-link" href="404">Parco della Pace - Top Scape Paysage n° 46 &nearr;</a>
         </div>
     </div>
 
@@ -264,7 +262,7 @@
         </div>
     </div>
 
-  <p class="foot">PAN Associati s.r.l.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;© Copyright 2024&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="text-link" href="#">Privacy e Cookie Policy</a></p>
+  <p class="foot">PAN Associati s.r.l.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;© Copyright 2024&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="text-link" href="privacy">Privacy e Cookie Policy</a></p>
 </footer>
 
 <script>
@@ -281,14 +279,39 @@ function toggleSubNav() {
 
 //DESKTOP MENU
 
-function toggleMenu(menuId) {
-  var menu = document.getElementById(menuId);
-  if (menu.style.display === "block") {
-    menu.style.display = "none";
-  } else {
-    menu.style.display = "block";
-  }
+function toggleMenu(menuId, event) {
+event.preventDefault(); // Prevents the default behavior of the link
+var menu = document.getElementById(menuId);
+if (menu.style.display === "block") {
+  menu.style.display = "none";
+} else {
+  menu.style.display = "block";
 }
+}
+
+// DARK MODE
+document.addEventListener('DOMContentLoaded', function() {
+  const darkModeToggle = document.getElementById('darkModeToggle');
+  
+  // Check if dark mode preference is stored in local storage
+  const isDarkMode = localStorage.getItem('darkMode') === 'true';
+
+  // Set initial dark mode state based on local storage
+  if (isDarkMode) {
+    document.body.classList.add('dark-mode');
+    darkModeToggle.checked = true;
+  }
+
+  // Toggle dark mode function
+  function toggleDarkMode() {
+    const isDarkMode = document.body.classList.contains('dark-mode');
+    localStorage.setItem('darkMode', !isDarkMode); // Store dark mode state in local storage
+    document.body.classList.toggle('dark-mode');
+  }
+
+  // Event listener for dark mode toggle switch
+  darkModeToggle.addEventListener('change', toggleDarkMode);
+});
 
 //SLIDESHOWS
 
@@ -333,30 +356,6 @@ function initializeSlider(sliderId) {
 // Initialize sliders
 initializeSlider('slider1');
 initializeSlider('slider2');
-
-// DARK MODE
-document.addEventListener('DOMContentLoaded', function() {
-  const darkModeToggle = document.getElementById('darkModeToggle');
-  
-  // Check if dark mode preference is stored in local storage
-  const isDarkMode = localStorage.getItem('darkMode') === 'true';
-
-  // Set initial dark mode state based on local storage
-  if (isDarkMode) {
-    document.body.classList.add('dark-mode');
-    darkModeToggle.checked = true;
-  }
-
-  // Toggle dark mode function
-  function toggleDarkMode() {
-    const isDarkMode = document.body.classList.contains('dark-mode');
-    localStorage.setItem('darkMode', !isDarkMode); // Store dark mode state in local storage
-    document.body.classList.toggle('dark-mode');
-  }
-
-  // Event listener for dark mode toggle switch
-  darkModeToggle.addEventListener('change', toggleDarkMode);
-});
 </script>
 
 </body>
