--- a/en/index.html
+++ b/en/index.html
@@ -19,7 +19,7 @@
   
   <div class="lang-switch">
     <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
-    <a href="../it/index">IT</a>
+    <a href="../it/404">IT</a>
   </div>
   <div class="DarkModeButton">
     <input type="checkbox" id="darkModeToggle" class="darkModeToggle">
@@ -28,42 +28,42 @@
     </label>
   </div>
   <div class="desktop-menu">
-    <a href="#">Studio</a>
-    <a href="#">News</a>
-    <a href="#" onclick="toggleMenu('servicesMenu')">Projects</a>
+    <a href="404">Studio</a>
+    <a href="404">News</a>
+    <a href="#" onclick="toggleMenu('servicesMenu', event);">Projects</a>
     <ul id="servicesMenu" class="dropdown-menu">
-      <li><a href="#">All projects</a></li>
-      <li><a href="#">Regeneration of urban spaces</a></li>
-      <li><a href="#">Parks and gardens</a></li>
-      <li><a href="#">Environmental and landscape redevelopment</a></li>
-      <li><a href="#">Environmental insertion of infrastructures</a></li>
-      <li><a href="#">Architecture</a></li>
+      <li><a href="404">All projects</a></li>
+      <li><a href="404">Regeneration of urban spaces</a></li>
+      <li><a href="404">Parks and gardens</a></li>
+      <li><a href="404">Environmental and landscape redevelopment</a></li>
+      <li><a href="404">Environmental insertion of infrastructures</a></li>
+      <li><a href="404">Architecture</a></li>
     </ul>
-    <a href="#">Contacts</a>
+    <a href="404">Contacts</a>
   </div>
 </header>
 
 <!--MENU-->
 <div id="mySidenav" class="sidenav">
-  <a href="#">Studio</a>
-  <a href="#">News</a>
+  <a href="404">Studio</a>
+  <a href="404">News</a>
   <div class="sub-links">
     <a href="#" onclick="toggleSubNav()">Projects</a>
     <div id="subNavLinks" class="sub-nav-links">
-      <a href="#">All projects</a>
-      <a href="#">Regeneration of urban spaces</a>
-      <a href="#">Parks and gardens</a>
-      <a href="#">Environmental and landscape redevelopment</a>
-      <a href="#">Environmental insertion of infrastructures</a>
-      <a href="#">Architecture</a>
+      <a href="404">All projects</a>
+      <a href="404">Regeneration of urban spaces</a>
+      <a href="404">Parks and gardens</a>
+      <a href="404">Environmental and landscape redevelopment</a>
+      <a href="404">Environmental insertion of infrastructures</a>
+      <a href="404">Architecture</a>
     </div>
   </div>
-  <a href="#">Contact</a>
+  <a href="404">Contact</a>
 </div>
 
 <main>
 <!--#0-->
-  <section class="mono">
+  <section>
     <div class="slider" id="slider1">
       <div class="slides">
         <div class="slide">
@@ -72,7 +72,7 @@
                 <div class="quote">
                   <p>Parco della Pace - Vicenza</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Learn more</a>
+                  <a class="color-reversed-link" href="404">Learn more</a>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
                 <div class="quote">
                   <p>Castellaneta Marina</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Learn more</a>
+                  <a class="color-reversed-link" href="404">Learn more</a>
                 </div>
             </div>
         </div>
@@ -92,7 +92,7 @@
                 <div class="quote">
                   <p>Expo 2015 - Milano</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Learn more</a>
+                  <a class="color-reversed-link" href="404">Learn more</a>
                 </div>
             </div>
         </div>
@@ -102,7 +102,7 @@
                 <div class="quote">
                   <p>Parco Nazionale Gran Paradiso</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Learn more</a>
+                  <a class="color-reversed-link" href="404">Learn more</a>
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
                 <div class="quote">
                   <p>Grand Hotel di San Pellegrino Terme</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Learn more</a>
+                  <a class="color-reversed-link" href="404">Learn more</a>
                 </div>
             </div>
         </div>
@@ -126,31 +126,29 @@
       <img src="../library/home/pan-home-chisiamo.jpg">
     </div>
     <div class="text-elements">
-      <div class="big-separator"></div>
       <h1>Who we are</h1>
       <h2>Progetazzione<br>Architettura +<br>Natura</h2>
       <p>PAN associati S.R.L. is a company founded in 2001 made up of a multidisciplinary group of professionals who operate in the fields of architectural and landscape design, up to territorial planning.</p>
       <p>Our mission is to revitalize degraded spaces, converting them into livable and sustainable areas that are of value to local communities.</p>
       <p>We see these spaces as an opportunity to improve urban life, create new habitats and ecosystems, foster biodiversity, and bring ecological benefits through infrastructure that provides ecosystem services. We are committed to the fight against climate change by adopting design strategies inspired by nature-based solutions (NBS).</p>
-      <div class="small-separator"></div>
-      <a class="classic-link" href="#">Learn more</a>
+      <div class="big-separator"></div>
+      <a class="classic-link" href="404">Learn more</a>
     </div>
   </section>
 <!--#2-->
   <section class="split">
     <div class="text-elements">
-      <div class="big-separator"></div>
       <h1>What do we do</h1>
       <h2>Our areas of expertise</h2>
       <p>Through a multidisciplinary approach, our activity extends to both the public and private sectors, offering a range of services that covers all phases of design, construction management and safety coordination, both during the design and execution phases.</p>
       <p>We also offer specialist consultancy in the environmental and landscape sector, including feasibility studies, agronomic, botanical and forestry analyses, urban planning analyzes and studies, checks and environmental studies for the authorization of plans and projects.</p>
       <p>In our creative process, we pay attention to every aspect of the local ecosystem, aiming to develop functional and resilient landscapes.</p>
-      <!--<div class="small-separator"></div>
-      <p><a class="hermit-link" href="#">Regeneration of urban spaces &nearr;</a>
-      <br><a class="hermit-link" href="#">Parks and gardens &nearr;</a>
-      <br><a class="hermit-link" href="#">Environmental and landscape redevelopment &nearr;</a>
-      <br><a class="hermit-link" href="#">Environmental insertion of infrastructures &nearr;</a>
-      <br><a class="hermit-link" href="#">Architecture &nearr;</a></p>-->
+      <div class="big-separator"></div>
+      <a class="classic-link" href="404">Regeneration&nbsp;of&nbsp;urban&nbsp;spaces&nbsp;&nearr;</a>
+      <a class="classic-link" href="404">Parks&nbsp;and&nbsp;gardens&nbsp;&nearr;</a>
+      <a class="classic-link" href="404">Environmental&nbsp;and&nbsp;landscape&nbsp;redevelopment&nbsp;&nearr;</a>
+      <a class="classic-link" href="404">Environmental&nbsp;insertion&nbsp;of&nbsp;infrastructures&nbsp;&nearr;</a>
+      <a class="classic-link" href="404">Architecture&nbsp;&nearr;</a>
     </div>
     <div class="slider" id="slider2">
       <div class="slides">
@@ -160,7 +158,7 @@
                 <div class="quote">
                   <p>Regeneration of urban spaces</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Learn more</a>
+                  <a class="color-reversed-link" href="404">Learn more</a>
                 </div>
             </div>
         </div>
@@ -170,7 +168,7 @@
                 <div class="quote">
                   <p>Parks and gardens</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Learn more</a>
+                  <a class="color-reversed-link" href="404">Learn more</a>
                 </div>
             </div>
         </div>
@@ -180,7 +178,7 @@
                 <div class="quote">
                   <p>Environmental and landscape redevelopment</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Learn more</a>
+                  <a class="color-reversed-link" href="404">Learn more</a>
                 </div>
             </div>
         </div>
@@ -190,7 +188,7 @@
                 <div class="quote">
                   <p>Environmental insertion of infrastructures</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Learn more</a>
+                  <a class="color-reversed-link" href="404">Learn more</a>
                 </div>
             </div>
         </div>
@@ -200,7 +198,7 @@
                 <div class="quote">
                   <p>Architecture</p>
                   <div class="small-separator"></div>
-                  <a class="color-reversed-link" href="#">Learn more</a>
+                  <a class="color-reversed-link" href="404">Learn more</a>
                 </div>
             </div>
         </div>
@@ -213,13 +211,13 @@
       <img src="../library/home/pan-home-lavoraconnoi.jpg">
     </div>
     <div class="text-elements">
-      <div class="big-separator"></div>
       <h1>Collaborations</h1>
       <h2>Do you have something extra?<br>Work with us!</h2>
       <p>The PAN studio is always looking for new brilliant and passionate figures ready to explore new horizons and who can enrich our team of professionals for a stimulating and long-term collaboration.</p>
       <p>Are you motivated to shape the future through innovative and sustainable landscape design?</p>
       <p>Discover how your vision can help shape memorable environments and join us on this exciting adventure. Visit our 'Work with us' section to find out more and send us your application.</p>
-      <a class="classic-link" href="#">Learn more</a>
+      <div class="big-separator"></div>
+      <a class="classic-link" href="404">Learn more</a>
     </div>
   </section>
 </main>
@@ -230,15 +228,15 @@
     <div class="footer-top">
         <div class="column">
             <h1>Publication</h1>
-            <a class="hermit-link" href="#">Parco della Pace - Paysage n° 53 &nearr;</a>
+            <a class="hermit-link" href="404">Parco della Pace - Top Scape Paysage n° 53 &nearr;</a>
         </div>
         <div class="column">
             <h1>Publication</h1>
-            <a class="hermit-link" href="#">Parco della Pace- Rivista Indusstria delle costruzioni n°493 &nearr;</a>
+            <a class="hermit-link" href="404">Parco della Pace- Rivista Industria delle costruzioni n°493 &nearr;</a>
         </div>
         <div class="column">
             <h1>Publication</h1>
-            <a class="hermit-link" href="#">Parco della Pace - Paysage n° 46 &nearr;</a>
+            <a class="hermit-link" href="404">Parco della Pace - Top Scape Paysage n° 46 &nearr;</a>
         </div>
     </div>
 
@@ -264,7 +262,7 @@
         </div>
     </div>
 
-  <p class="foot">PAN Associati s.r.l.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;© Copyright 2024&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="text-link" href="#">Privacy e Cookie Policy</a></p>
+  <p class="foot">PAN Associati s.r.l.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;© Copyright 2024&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="text-link" href="privacy">Privacy e Cookie Policy</a></p>
 </footer>
 
 <script>
@@ -281,14 +279,39 @@ function toggleSubNav() {
 
 //DESKTOP MENU
 
-function toggleMenu(menuId) {
-  var menu = document.getElementById(menuId);
-  if (menu.style.display === "block") {
-    menu.style.display = "none";
-  } else {
-    menu.style.display = "block";
-  }
+function toggleMenu(menuId, event) {
+event.preventDefault(); // Prevents the default behavior of the link
+var menu = document.getElementById(menuId);
+if (menu.style.display === "block") {
+  menu.style.display = "none";
+} else {
+  menu.style.display = "block";
 }
+}
+
+// DARK MODE
+document.addEventListener('DOMContentLoaded', function() {
+  const darkModeToggle = document.getElementById('darkModeToggle');
+  
+  // Check if dark mode preference is stored in local storage
+  const isDarkMode = localStorage.getItem('darkMode') === 'true';
+
+  // Set initial dark mode state based on local storage
+  if (isDarkMode) {
+    document.body.classList.add('dark-mode');
+    darkModeToggle.checked = true;
+  }
+
+  // Toggle dark mode function
+  function toggleDarkMode() {
+    const isDarkMode = document.body.classList.contains('dark-mode');
+    localStorage.setItem('darkMode', !isDarkMode); // Store dark mode state in local storage
+    document.body.classList.toggle('dark-mode');
+  }
+
+  // Event listener for dark mode toggle switch
+  darkModeToggle.addEventListener('change', toggleDarkMode);
+});
 
 //SLIDESHOWS
 
@@ -333,30 +356,6 @@ function initializeSlider(sliderId) {
 // Initialize sliders
 initializeSlider('slider1');
 initializeSlider('slider2');
-
-// DARK MODE
-document.addEventListener('DOMContentLoaded', function() {
-  const darkModeToggle = document.getElementById('darkModeToggle');
-  
-  // Check if dark mode preference is stored in local storage
-  const isDarkMode = localStorage.getItem('darkMode') === 'true';
-
-  // Set initial dark mode state based on local storage
-  if (isDarkMode) {
-    document.body.classList.add('dark-mode');
-    darkModeToggle.checked = true;
-  }
-
-  // Toggle dark mode function
-  function toggleDarkMode() {
-    const isDarkMode = document.body.classList.contains('dark-mode');
-    localStorage.setItem('darkMode', !isDarkMode); // Store dark mode state in local storage
-    document.body.classList.toggle('dark-mode');
-  }
-
-  // Event listener for dark mode toggle switch
-  darkModeToggle.addEventListener('change', toggleDarkMode);
-});
 </script>
 
 </body>
